--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Booki</title>
 </head>
 <body>
@@ -55,9 +55,106 @@
                 </div>
             </div>
             <div class="menu--information menu--margin--bottom">
-                <i class="fa-solid fa-info-circle"></i>
+                <i class="fa-solid fa-info"></i>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
+        </section>
+        <!-- section 2 menu des logements principaux -->
+        <section class="location">
+            <h2 id="hebergements">Hébergements à Marseille</h2>
+            <div class="location--liste">
+                <article>
+                    <img src="./images/hebergements/3_medium/auberge-cannebiere.jpg" 
+                    srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1000w, ./images/hebergements/4_small/auberge-cannebiere.jpg 500w"
+                    sizes="(max-width: 768px) 500px, 1000px"
+                    alt="Hotel de la mer">
+                    <p>Auberge La Cannebière</p>
+                    <p>Nuit à partir de 25€</p>
+                    <div class="location--etoile">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </article>
+                <article>
+                    <img src="./images/hebergements/3_medium/hotel-port.jpg" 
+                    srcset="./images/hebergements/3_medium/hotel-port.jpg 1000w, ./images/hebergements/4_small/hotel-port.jpg 500w"
+                    sizes="(max-width: 768px) 500px, 1000px"
+                    alt="Hotel de la mer">
+                    <p>Hôtel du port</p>
+                    <p>Nuit à partir de 52€</p>
+                    <div class="location--etoile">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </article>
+                <article>
+                    <img src="./images/hebergements/3_medium/hotel-mouette.jpg" 
+                    srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1000w, ./images/hebergements/4_small/hotel-mouette.jpg 500w"
+                    sizes="(max-width: 768px) 500px, 1000px"
+                    alt="Hotel de la mer">
+                    <p>Hôtel Les mouttes</p>
+                    <p>Nuit à partir de 76€</p>
+                    <div class="location--etoile">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </article>
+                <article>
+                    <img src="./images/hebergements/3_medium/hotel-mer.jpg" 
+                    srcset="./images/hebergements/3_medium/hotel-mer.jpg 1000w, ./images/hebergements/4_small/hotel-mer.jpg 500w"
+                    sizes="(max-width: 768px) 500px, 1000px"
+                    alt="Hotel de la mer">
+                    <p>Hôtel de la mer</p>
+                    <p>Nuit à partir de 46€</p>
+                    <div class="location--etoile">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </article>
+                <article>
+                    <img src="./images/hebergements/3_medium/auberge-panier.jpg" 
+                    srcset="./images/hebergements/3_medium/auberge-panier.jpg 1000w, ./images/hebergements/4_small/auberge-panier.jpg 500w"
+                    sizes="(max-width: 768px) 500px, 1000px"
+                    alt="Hotel de la mer">
+                    <p>Auberge Le Panier</p>
+                    <p>Nuit à partir de 23€</p>
+                    <div class="location--etoile">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </article>
+                <article>
+                    <img src="./images/hebergements/3_medium/hotel-amina.jpg" 
+                    srcset="./images/hebergements/3_medium/hotel-amina.jpg 1000w, ./images/hebergements/4_small/hotel-amina.jpg 500w"
+                    sizes="(max-width: 768px) 500px, 1000px"
+                    alt="Hotel de la mer">
+                    <p>Hôtel chez Amina</p>
+                    <p>Nuit à partir de 96€</p>
+                    <div class="location--etoile">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </article>
+            </div>
+            <p>Afficher plus</p>
         </section>
     </main>
 </body>
