--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./images/logo/Booki.png" alt="" class="header--logo">
        <nav class="header--nav">
            <ul>
-               <li><a href="#hebergements">Hébergements</a></li>
+               <li><a href="#hebergements-marseille">Hébergements</a></li>
                <li><a href="#activites">Activités</a></li>
            </ul>
        </nav>
@@ -61,7 +61,7 @@
         </section>
         <!-- section 2 menu des logements principaux -->
         <section class="location">
-            <h2 id="hebergements">Hébergements à Marseille</h2>
+            <h2 id="hebergements-marseille">Hébergements à Marseille</h2>
             <div class="location--liste">
                 <article>
                     <img src="./images/hebergements/3_medium/auberge-cannebiere.jpg" 
