Mise en forme des hébergements

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1000w, ./images/hebergements/4_small/auberge-cannebiere.jpg 500w"
                     sizes="(max-width: 768px) 500px, 1000px"
                     alt="Hotel de la mer">
-                    <p>Auberge La Cannebière</p>
+                    <p class="location--titre">Auberge La Cannebière</p>
                     <p>Nuit à partir de 25€</p>
-                    <div class="location--etoile">
+                    <div class="location--etoile quatre--etoile">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -83,9 +83,9 @@
                     srcset="./images/hebergements/3_medium/hotel-port.jpg 1000w, ./images/hebergements/4_small/hotel-port.jpg 500w"
                     sizes="(max-width: 768px) 500px, 1000px"
                     alt="Hotel de la mer">
-                    <p>Hôtel du port</p>
+                    <p class="location--titre">Hôtel du port</p>
                     <p>Nuit à partir de 52€</p>
-                    <div class="location--etoile">
+                    <div class="location--etoile toute--etoile">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -98,9 +98,9 @@
                     srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1000w, ./images/hebergements/4_small/hotel-mouette.jpg 500w"
                     sizes="(max-width: 768px) 500px, 1000px"
                     alt="Hotel de la mer">
-                    <p>Hôtel Les mouttes</p>
+                    <p class="location--titre">Hôtel Les mouettes</p>
                     <p>Nuit à partir de 76€</p>
-                    <div class="location--etoile">
+                    <div class="location--etoile quatre--etoile">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -113,7 +113,7 @@
                     srcset="./images/hebergements/3_medium/hotel-mer.jpg 1000w, ./images/hebergements/4_small/hotel-mer.jpg 500w"
                     sizes="(max-width: 768px) 500px, 1000px"
                     alt="Hotel de la mer">
-                    <p>Hôtel de la mer</p>
+                    <p class="location--titre">Hôtel de la mer</p>
                     <p>Nuit à partir de 46€</p>
                     <div class="location--etoile">
                         <i class="fa-solid fa-star"></i>
@@ -128,9 +128,9 @@
                     srcset="./images/hebergements/3_medium/auberge-panier.jpg 1000w, ./images/hebergements/4_small/auberge-panier.jpg 500w"
                     sizes="(max-width: 768px) 500px, 1000px"
                     alt="Hotel de la mer">
-                    <p>Auberge Le Panier</p>
+                    <p class="location--titre">Auberge Le Panier</p>
                     <p>Nuit à partir de 23€</p>
-                    <div class="location--etoile">
+                    <div class="location--etoile quatre--etoile">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -143,9 +143,9 @@
                     srcset="./images/hebergements/3_medium/hotel-amina.jpg 1000w, ./images/hebergements/4_small/hotel-amina.jpg 500w"
                     sizes="(max-width: 768px) 500px, 1000px"
                     alt="Hotel de la mer">
-                    <p>Hôtel chez Amina</p>
+                    <p class="location--titre">Hôtel chez Amina</p>
                     <p>Nuit à partir de 96€</p>
-                    <div class="location--etoile">
+                    <div class="location--etoile toute--etoile">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
