ajout des liens cliquables sur chaque carte des hébergements

--- a/index.html
+++ b/index.html
@@ -59,99 +59,112 @@
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </section>
-        <!-- section 2 menu des logements principaux -->
+        <!-- section 2 menu des hébergements principaux -->
         <section class="location">
             <h2 id="hebergements-marseille">Hébergements à Marseille</h2>
             <div class="location--liste">
+                <!-- liste des hébergements individuels -->
                 <article>
-                    <img src="./images/hebergements/3_medium/auberge-cannebiere.jpg" 
-                    srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1000w, ./images/hebergements/4_small/auberge-cannebiere.jpg 500w"
-                    sizes="(max-width: 768px) 500px, 1000px"
-                    alt="Hotel de la mer">
-                    <p class="location--titre">Auberge La Cannebière</p>
-                    <p>Nuit à partir de 25€</p>
-                    <div class="location--etoile quatre--etoile">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+                    <a href="#">
+                        <img src="./images/hebergements/3_medium/auberge-cannebiere.jpg" 
+                        srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1000w, ./images/hebergements/4_small/auberge-cannebiere.jpg 500w"
+                        sizes="(max-width: 768px) 500px, 1000px"
+                        alt="Auberge de la Cannebière">
+                        <p class="location--titre">Auberge La Cannebière</p>
+                        <p>Nuit à partir de 25€</p>
+                        <div class="location--etoile quatre--etoile">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </a>
                 </article>
                 <article>
-                    <img src="./images/hebergements/3_medium/hotel-port.jpg" 
-                    srcset="./images/hebergements/3_medium/hotel-port.jpg 1000w, ./images/hebergements/4_small/hotel-port.jpg 500w"
-                    sizes="(max-width: 768px) 500px, 1000px"
-                    alt="Hotel de la mer">
-                    <p class="location--titre">Hôtel du port</p>
-                    <p>Nuit à partir de 52€</p>
-                    <div class="location--etoile toute--etoile">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+                    <a href="">
+                        <img src="./images/hebergements/3_medium/hotel-port.jpg" 
+                        srcset="./images/hebergements/3_medium/hotel-port.jpg 1000w, ./images/hebergements/4_small/hotel-port.jpg 500w"
+                        sizes="(max-width: 768px) 500px, 1000px"
+                        alt="Hotel du port">
+                        <p class="location--titre">Hôtel du port</p>
+                        <p>Nuit à partir de 52€</p>
+                        <div class="location--etoile toute--etoile">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </a>
                 </article>
                 <article>
-                    <img src="./images/hebergements/3_medium/hotel-mouette.jpg" 
-                    srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1000w, ./images/hebergements/4_small/hotel-mouette.jpg 500w"
-                    sizes="(max-width: 768px) 500px, 1000px"
-                    alt="Hotel de la mer">
-                    <p class="location--titre">Hôtel Les mouettes</p>
-                    <p>Nuit à partir de 76€</p>
-                    <div class="location--etoile quatre--etoile">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+                    <a href="">
+                        <img src="./images/hebergements/3_medium/hotel-mouette.jpg" 
+                        srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1000w, ./images/hebergements/4_small/hotel-mouette.jpg 500w"
+                        sizes="(max-width: 768px) 500px, 1000px"
+                        alt="Hotel des mouettes">
+                        <p class="location--titre">Hôtel Les mouettes</p>
+                        <p>Nuit à partir de 76€</p>
+                        <div class="location--etoile quatre--etoile">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </a>
                 </article>
                 <article>
-                    <img src="./images/hebergements/3_medium/hotel-mer.jpg" 
-                    srcset="./images/hebergements/3_medium/hotel-mer.jpg 1000w, ./images/hebergements/4_small/hotel-mer.jpg 500w"
-                    sizes="(max-width: 768px) 500px, 1000px"
-                    alt="Hotel de la mer">
-                    <p class="location--titre">Hôtel de la mer</p>
-                    <p>Nuit à partir de 46€</p>
-                    <div class="location--etoile">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+                    <a href="">
+                        <img src="./images/hebergements/3_medium/hotel-mer.jpg" 
+                        srcset="./images/hebergements/3_medium/hotel-mer.jpg 1000w, ./images/hebergements/4_small/hotel-mer.jpg 500w"
+                        sizes="(max-width: 768px) 500px, 1000px"
+                        alt="Hotel de la mer">
+                        <p class="location--titre">Hôtel de la mer</p>
+                        <p>Nuit à partir de 46€</p>
+                        <div class="location--etoile">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </a>
                 </article>
                 <article>
-                    <img src="./images/hebergements/3_medium/auberge-panier.jpg" 
-                    srcset="./images/hebergements/3_medium/auberge-panier.jpg 1000w, ./images/hebergements/4_small/auberge-panier.jpg 500w"
-                    sizes="(max-width: 768px) 500px, 1000px"
-                    alt="Hotel de la mer">
-                    <p class="location--titre">Auberge Le Panier</p>
-                    <p>Nuit à partir de 23€</p>
-                    <div class="location--etoile quatre--etoile">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+                    <a href="">
+                        <img src="./images/hebergements/3_medium/auberge-panier.jpg" 
+                        srcset="./images/hebergements/3_medium/auberge-panier.jpg 1000w, ./images/hebergements/4_small/auberge-panier.jpg 500w"
+                        sizes="(max-width: 768px) 500px, 1000px"
+                        alt="Auberge du panier">
+                        <p class="location--titre">Auberge Le Panier</p>
+                        <p>Nuit à partir de 23€</p>
+                        <div class="location--etoile quatre--etoile">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </a>
                 </article>
                 <article>
-                    <img src="./images/hebergements/3_medium/hotel-amina.jpg" 
-                    srcset="./images/hebergements/3_medium/hotel-amina.jpg 1000w, ./images/hebergements/4_small/hotel-amina.jpg 500w"
-                    sizes="(max-width: 768px) 500px, 1000px"
-                    alt="Hotel de la mer">
-                    <p class="location--titre">Hôtel chez Amina</p>
-                    <p>Nuit à partir de 96€</p>
-                    <div class="location--etoile toute--etoile">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
+                    <a href="">
+                        <img src="./images/hebergements/3_medium/hotel-amina.jpg" 
+                        srcset="./images/hebergements/3_medium/hotel-amina.jpg 1000w, ./images/hebergements/4_small/hotel-amina.jpg 500w"
+                        sizes="(max-width: 768px) 500px, 1000px"
+                        alt="Hotel de Amina">
+                        <p class="location--titre">Hôtel chez Amina</p>
+                        <p>Nuit à partir de 96€</p>
+                        <div class="location--etoile toute--etoile">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </a>
                 </article>
             </div>
             <p>Afficher plus</p>
