ajout en html et mise en forme du menu activités

--- a/index.html
+++ b/index.html
@@ -238,7 +238,60 @@
                     </article>
                 </div>
             </aside>
-        </section>      
+        </section>
+				<section class="activite-marseille">
+					<h2>Activités à Marseille</h2>
+					<div class="activite--groupe">
+						<div class="activite--ville">
+							<img src="./images/activites/3_medium/vieux-port.jpg" 
+									srcset="./images/activites/3_medium/vieux-port.jpg 1400w, ./images/activites/3_medium/vieux-port.jpg 700w"
+									sizes="(max-width: 768px) 700px, 1400px"
+									alt="Hotel de Amina"
+									class="image--port">
+							<p>Vieux Port</p>
+						</div>
+						<div class="activite--ville--deux">
+							<div class="activite--pomegues">
+								<img src="./images/activites/3_medium/fort-pomegues.jpg" 
+									srcset="./images/activites/3_medium/fort-pomegues.jpg 700w, ./images/activites/3_medium/fort-pomegues.jpg 350w"
+									sizes="(max-width: 768px) 350px, 700px"
+									alt="Hotel de Amina">
+								<p>Fort de Pomègues</p>
+							</div>
+							<div class="activite--frioul">
+								<img src="./images/activites/3_medium/iles-frioul.jpg" 
+									srcset="./images/activites/3_medium/iles-frioul.jpg 1300w, ./images/activites/3_medium/iles-frioul.jpg 650w"
+									sizes="(max-width: 768px) 650px, 1300px"
+									alt="Hotel de Amina">
+								<p>Iles du Frioul</p>
+							</div>
+						</div>
+						<div class="activite--ville">
+							<img src="./images/activites/3_medium/calanques.jpg" 
+									srcset="./images/activites/3_medium/calanques.jpg 1200w, ./images/activites/3_medium/calanques.jpg 600w"
+									sizes="(max-width: 768px) 600px, 1200px"
+									alt="Hotel de Amina"
+									class="image--calanques">
+							<p>Par National des Calanques</p>
+						</div>
+						<div class="activite--ville--deux">
+							<div class="activite--notre--dame">
+								<img src="./images/activites/3_medium/dame-de-la-garde.jpg" 
+									srcset="./images/activites/3_medium/dame-de-la-garde.jpg 1100w, ./images/activites/3_medium/dame-de-la-garde.jpg 590w"
+									sizes="(max-width: 768px) 1100px, 590px"
+									alt="Hotel de Amina">
+								<p>Notre-Dame-de-la-Garde</p>
+							</div>
+							<div class="activite--longchamp">
+								<img src="./images/activites/3_medium/parc-longchamp.jpg" 
+									srcset="./images/activites/3_medium/parc-longchamp.jpg 1000w, ./images/activites/3_medium/parc-longchamp.jpg 500w"
+									sizes="(max-width: 768px) 1000px, 500px"
+									alt="Hotel de Amina">
+								<p>Parc Longchamp</p>
+							</div>
+						</div>
+					</div>
+				</section>    
     </main>
 </body>
 </html>
