ajout et mise en place du footer + retouche de certains éléments

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap" rel="stylesheet">
@@ -37,19 +36,19 @@
             </form>
             <div class="menu--filtre menu--margin--bottom">
                 <p>Filtres</p>
-                <div class="menu--filtre--catgorie">
+                <div class="menu--filtre--categorie">
                     <i class="fa-solid fa-money-bill-wave"></i>
                     <p class="menu--filtre--radius">Économique</p>
                 </div>
-                <div class="menu--filtre--catgorie">
+                <div class="menu--filtre--categorie">
                     <i class="fa-solid fa-child-reaching"></i>
                     <p class="menu--filtre--radius">Familial</p>
                 </div>
-                <div class="menu--filtre--catgorie">
+                <div class="menu--filtre--categorie">
                     <i class="fa-solid fa-heart"></i>
                     <p class="menu--filtre--radius">Romantique</p>
                 </div>
-                <div class="menu--filtre--catgorie">
+                <div class="menu--filtre--categorie">
                     <i class="fa-solid fa-dog"></i>
                     <p class="menu--filtre--radius">Animaux autorisés</p>
                 </div>
@@ -68,8 +67,8 @@
                     <article>
                         <a href="#">
                             <img src="./images/hebergements/3_medium/auberge-cannebiere.jpg" 
-                            srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1000w, ./images/hebergements/4_small/auberge-cannebiere.jpg 500w"
-                            sizes="(max-width: 768px) 500px, 1000px"
+                            srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1500w, ./images/hebergements/4_small/auberge-cannebiere.jpg 750w"
+                            sizes="(max-width: 768px) 750px, 1500px"
                             alt="Auberge de la Cannebière">
                             <p class="location--titre">Auberge La Cannebière</p>
                             <p>Nuit à partir de 25€</p>
@@ -85,8 +84,8 @@
                     <article>
                         <a href="">
                             <img src="./images/hebergements/3_medium/hotel-port.jpg" 
-                            srcset="./images/hebergements/3_medium/hotel-port.jpg 1000w, ./images/hebergements/4_small/hotel-port.jpg 500w"
-                            sizes="(max-width: 768px) 500px, 1000px"
+                            srcset="./images/hebergements/3_medium/hotel-port.jpg 1368w, ./images/hebergements/4_small/hotel-port.jpg 684w"
+                            sizes="(max-width: 768px) 684px, 1368px"
                             alt="Hotel du port">
                             <p class="location--titre">Hôtel du port</p>
                             <p>Nuit à partir de 52€</p>
@@ -102,8 +101,8 @@
                     <article>
                         <a href="">
                             <img src="./images/hebergements/3_medium/hotel-mouette.jpg" 
-                            srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1000w, ./images/hebergements/4_small/hotel-mouette.jpg 500w"
-                            sizes="(max-width: 768px) 500px, 1000px"
+                            srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1500w, ./images/hebergements/4_small/hotel-mouette.jpg 750w"
+                            sizes="(max-width: 768px) 750px, 1500px"
                             alt="Hotel des mouettes">
                             <p class="location--titre">Hôtel Les mouettes</p>
                             <p>Nuit à partir de 76€</p>
@@ -136,8 +135,8 @@
                     <article>
                         <a href="">
                             <img src="./images/hebergements/3_medium/auberge-panier.jpg" 
-                            srcset="./images/hebergements/3_medium/auberge-panier.jpg 1000w, ./images/hebergements/4_small/auberge-panier.jpg 500w"
-                            sizes="(max-width: 768px) 500px, 1000px"
+                            srcset="./images/hebergements/3_medium/auberge-panier.jpg 1303w, ./images/hebergements/4_small/auberge-panier.jpg 652w"
+                            sizes="(max-width: 768px) 652px, 1303px"
                             alt="Auberge du panier">
                             <p class="location--titre">Auberge Le Panier</p>
                             <p>Nuit à partir de 23€</p>
@@ -153,8 +152,8 @@
                     <article>
                         <a href="">
                             <img src="./images/hebergements/3_medium/hotel-amina.jpg" 
-                            srcset="./images/hebergements/3_medium/hotel-amina.jpg 1000w, ./images/hebergements/4_small/hotel-amina.jpg 500w"
-                            sizes="(max-width: 768px) 500px, 1000px"
+                            srcset="./images/hebergements/3_medium/hotel-amina.jpg 972w, ./images/hebergements/4_small/hotel-amina.jpg 486w"
+                            sizes="(max-width: 768px) 486px, 972px"
                             alt="Hotel de Amina">
                             <p class="location--titre">Hôtel chez Amina</p>
                             <p>Nuit à partir de 96€</p>
@@ -182,9 +181,9 @@
                     <article>
                             <div class="location--image-pop">
                                 <img src="./images/hebergements/3_medium/hotel-soleil-matin.jpg" 
-                                srcset="./images/hebergements/3_medium/hotel-soleil-matin.jpg 1000w, ./images/hebergements/4_small/hotel-soleil-matin.jpg 500w"
-                                sizes="(max-width: 768px) 500px, 1000px"
-                                alt="Hotel de Amina">
+                                srcset="./images/hebergements/3_medium/hotel-soleil-matin.jpg 1063w, ./images/hebergements/4_small/hotel-soleil-matin.jpg 532w"
+                                sizes="(max-width: 768px) 532px, 1063px"
+                                alt="Hotel Le Soleil du Matin">
                             </div>
                             <div class="location--description--pop">
                                 <p class="location--titre">Hôtel Le soleil du matin</p>
@@ -201,9 +200,9 @@
                     <article>
                             <div class="location--image-pop">
                                 <img src="./images/hebergements/3_medium/coeur-eau.jpg" 
-                                srcset="./images/hebergements/3_medium/coeur-eau.jpg 1000w, ./images/hebergements/4_small/coeur-eau.jpg 500w"
-                                sizes="(max-width: 768px) 500px, 1000px"
-                                alt="Hotel de Amina">
+                                srcset="./images/hebergements/3_medium/coeur-eau.jpg 1008w, ./images/hebergements/4_small/coeur-eau.jpg 504w"
+                                sizes="(max-width: 768px) 504px, 1008px"
+                                alt="Au coeur de l'eau Chambres d'hôtes">
                             </div>
                             <div class="location--description--pop">
                                 <p class="location--titre">Au coeur de l'eau Chambres d'hôtes</p>
@@ -222,7 +221,7 @@
                                 <img src="./images/hebergements/3_medium/hotel-tout-bleu.jpg" 
                                 srcset="./images/hebergements/3_medium/hotel-tout-bleu.jpg 1000w, ./images/hebergements/4_small/hotel-tout-bleu.jpg 500w"
                                 sizes="(max-width: 768px) 500px, 1000px"
-                                alt="Hotel de Amina">
+                                alt="Hotel tout Bleu et blanc">
                             </div>
                             <div class="location--description--pop">
                                 <p class="location--titre">Hôtel Tout bleu et Blanc</p>
@@ -239,6 +238,7 @@
                 </div>
             </aside>
         </section>
+        <!-- section 3 - activitéd à Marseille -->
         <section class="activite-marseille">
             <h2>Activités à Marseille</h2>
             <div class="activite--groupe">
@@ -246,7 +246,7 @@
                     <img src="./images/activites/3_medium/vieux-port.jpg" 
                             srcset="./images/activites/3_medium/vieux-port.jpg 1400w, ./images/activites/3_medium/vieux-port.jpg 700w"
                             sizes="(max-width: 768px) 700px, 1400px"
-                            alt="Hotel de Amina"
+                            alt="Le vieux port"
                             class="image--port">
                     <p>Vieux Port</p>
                 </div>
@@ -255,14 +255,14 @@
                         <img src="./images/activites/3_medium/fort-pomegues.jpg" 
                             srcset="./images/activites/3_medium/fort-pomegues.jpg 700w, ./images/activites/3_medium/fort-pomegues.jpg 350w"
                             sizes="(max-width: 768px) 350px, 700px"
-                            alt="Hotel de Amina">
+                            alt="Le ort de Pomègues">
                         <p>Fort de Pomègues</p>
                     </div>
                     <div class="activite--frioul">
                         <img src="./images/activites/3_medium/iles-frioul.jpg" 
                             srcset="./images/activites/3_medium/iles-frioul.jpg 1300w, ./images/activites/3_medium/iles-frioul.jpg 650w"
                             sizes="(max-width: 768px) 650px, 1300px"
-                            alt="Hotel de Amina">
+                            alt="Les îles Friouls">
                         <p>Iles du Frioul</p>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                     <img src="./images/activites/3_medium/calanques.jpg" 
                             srcset="./images/activites/3_medium/calanques.jpg 1200w, ./images/activites/3_medium/calanques.jpg 600w"
                             sizes="(max-width: 768px) 600px, 1200px"
-                            alt="Hotel de Amina"
+                            alt="Les calanques"
                             class="image--calanques">
                     <p>Par National des Calanques</p>
                 </div>
@@ -279,19 +279,49 @@
                         <img src="./images/activites/3_medium/dame-de-la-garde.jpg" 
                             srcset="./images/activites/3_medium/dame-de-la-garde.jpg 1100w, ./images/activites/3_medium/dame-de-la-garde.jpg 590w"
                             sizes="(max-width: 768px) 1100px, 590px"
-                            alt="Hotel de Amina">
+                            alt="Notre-Dame-de-la-Garde">
                         <p>Notre-Dame-de-la-Garde</p>
                     </div>
                     <div class="activite--longchamp">
                         <img src="./images/activites/3_medium/parc-longchamp.jpg" 
                             srcset="./images/activites/3_medium/parc-longchamp.jpg 1000w, ./images/activites/3_medium/parc-longchamp.jpg 500w"
                             sizes="(max-width: 768px) 1000px, 500px"
-                            alt="Hotel de Amina">
+                            alt="Le parc Longchamp">
                         <p>Parc Longchamp</p>
                     </div>
                 </div>
             </div>
         </section>    
     </main>
+    <footer class="footer">
+        <div class="footer--aPropos">
+					<h3>A propos</h3>
+					<nav class="footer--nav">
+						<ul>
+							<li class="footer--liste">Fonctionnement du site</li>
+							<li class="footer--liste">Conditions générales de vente</li>
+							<li class="footer--liste">Données et confidentialité</li>
+						</ul>
+					</nav>
+        </div>
+        <div class="footer--hebergements">
+					<h3>Nos hébergements</h3>
+					<nav class="footer--nav">
+						<ul>
+							<li class="footer--liste">Charte qualité</li>
+							<li class="footer--liste">Soumettre votre hôtel</li>
+						</ul>
+					</nav>
+        </div>
+        <div class="footer--assistance">
+					<h3>Assistance</h3>
+					<nav class="footer--nav">
+						<ul>
+							<li class="footer--liste">Centre d'aide</li>
+							<li class="footer--liste">Nous contacter</li>
+						</ul>
+					</nav>
+        </div>
+    </footer>
 </body>
 </html>
