--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<i class="fa fa-map-marker-alt menu--marker"></i>
 				<input type="text" value="Marseille, France" class="menu--input">
 				<button class="menu--btn">Rechercher</button>
+				<i class="fa-solid fa-magnifying-glass menu--icon--search"></i>
 			</form>
 			<div class="menu--filtre menu--margin--bottom">
 				<p>Filtres</p>
@@ -63,7 +64,7 @@
 			</div>
 		</section>
 		<!-- section 2 menu des hébergements principaux -->
-		<section class="section--principal">
+		<div class="section--principal">
 			<section class="location section--commune">
 				<h2 id="hebergements">Hébergements à Marseille</h2>
 				<div class="location--liste">
@@ -73,7 +74,7 @@
 							<img src="./images/hebergements/3_medium/auberge-cannebiere.jpg"
 								srcset="./images/hebergements/3_medium/auberge-cannebiere.jpg 1500w, ./images/hebergements/4_small/auberge-cannebiere.jpg 750w"
 								sizes="(max-width: 768px) 750px, 1500px" alt="Auberge de la Cannebière">
-							<p class="location--titre">Auberge La Cannebière</p>
+							<h3 class="location--titre">Auberge La Cannebière</h3>
 							<p>Nuit à partir de 25€</p>
 							<div class="location--etoile quatre--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -89,7 +90,7 @@
 							<img src="./images/hebergements/3_medium/hotel-port.jpg"
 								srcset="./images/hebergements/3_medium/hotel-port.jpg 1368w, ./images/hebergements/4_small/hotel-port.jpg 684w"
 								sizes="(max-width: 768px) 684px, 1368px" alt="Hotel du port">
-							<p class="location--titre">Hôtel du port</p>
+							<h3 class="location--titre">Hôtel du port</h3>
 							<p>Nuit à partir de 52€</p>
 							<div class="location--etoile toute--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -105,7 +106,7 @@
 							<img src="./images/hebergements/3_medium/hotel-mouette.jpg"
 								srcset="./images/hebergements/3_medium/hotel-mouette.jpg 1500w, ./images/hebergements/4_small/hotel-mouette.jpg 750w"
 								sizes="(max-width: 768px) 750px, 1500px" alt="Hotel des mouettes">
-							<p class="location--titre">Hôtel Les mouettes</p>
+							<h3 class="location--titre">Hôtel Les mouettes</h3>
 							<p>Nuit à partir de 76€</p>
 							<div class="location--etoile quatre--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -121,7 +122,7 @@
 							<img src="./images/hebergements/3_medium/hotel-mer.jpg"
 								srcset="./images/hebergements/3_medium/hotel-mer.jpg 1000w, ./images/hebergements/4_small/hotel-mer.jpg 500w"
 								sizes="(max-width: 768px) 500px, 1000px" alt="Hotel de la mer">
-							<p class="location--titre">Hôtel de la mer</p>
+							<h3 class="location--titre">Hôtel de la mer</h3>
 							<p>Nuit à partir de 46€</p>
 							<div class="location--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -137,7 +138,7 @@
 							<img src="./images/hebergements/3_medium/auberge-panier.jpg"
 								srcset="./images/hebergements/3_medium/auberge-panier.jpg 1303w, ./images/hebergements/4_small/auberge-panier.jpg 652w"
 								sizes="(max-width: 768px) 652px, 1303px" alt="Auberge du panier">
-							<p class="location--titre">Auberge Le Panier</p>
+							<h3 class="location--titre">Auberge Le Panier</h3>
 							<p>Nuit à partir de 23€</p>
 							<div class="location--etoile quatre--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -153,7 +154,7 @@
 							<img src="./images/hebergements/3_medium/hotel-amina.jpg"
 								srcset="./images/hebergements/3_medium/hotel-amina.jpg 972w, ./images/hebergements/4_small/hotel-amina.jpg 486w"
 								sizes="(max-width: 768px) 486px, 972px" alt="Hotel de Amina">
-							<p class="location--titre">Hôtel chez Amina</p>
+							<h3 class="location--titre">Hôtel chez Amina</h3>
 							<p>Nuit à partir de 96€</p>
 							<div class="location--etoile toute--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -175,7 +176,6 @@
 				</div>
 				<div class="location--liste--pop">
 					<!-- partie hébergements populaires -->
-
 					<article>
 						<div class="location--image-pop">
 							<img src="./images/hebergements/3_medium/hotel-soleil-matin.jpg"
@@ -183,7 +183,7 @@
 								sizes="(max-width: 768px) 532px, 1063px" alt="Hotel Le Soleil du Matin">
 						</div>
 						<div class="location--description--pop">
-							<p class="location--titre">Hôtel Le soleil du matin</p>
+							<h3 class="location--titre--pop">Hôtel Le soleil du matin</h3>
 							<p>Nuit à partir de 128€</p>
 							<div class="location--etoile toute--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -201,7 +201,7 @@
 								sizes="(max-width: 768px) 504px, 1008px" alt="Au coeur de l'eau Chambres d'hôtes">
 						</div>
 						<div class="location--description--pop">
-							<p class="location--titre">Au coeur de l'eau Chambres d'hôtes</p>
+							<h3 class="location--titre--pop">Au coeur de l'eau Chambres d'hôtes</h3>
 							<p>Nuit à partir de 71€</p>
 							<div class="location--etoile quatre--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -219,7 +219,7 @@
 								sizes="(max-width: 768px) 500px, 1000px" alt="Hotel tout Bleu et blanc">
 						</div>
 						<div class="location--description--pop">
-							<p class="location--titre">Hôtel Tout bleu et Blanc</p>
+							<h3 class="location--titre--pop">Hôtel Tout bleu et Blanc</h3>
 							<p>Nuit à partir de 68€</p>
 							<div class="location--etoile quatre--etoile">
 								<i class="fa-solid fa-star"></i>
@@ -232,7 +232,7 @@
 					</article>
 				</div>
 			</aside>
-		</section>
+		</div>
 		<!-- section 3 - activitéd à Marseille -->
 		<section class="activite-marseille">
 			<h2 id="activites">Activités à Marseille</h2>
@@ -285,9 +285,9 @@
 			<h3>A propos</h3>
 			<nav class="footer--nav">
 				<ul>
-					<li class="footer--liste">Fonctionnement du site</li>
-					<li class="footer--liste">Conditions générales de vente</li>
-					<li class="footer--liste">Données et confidentialité</li>
+					<li class="footer--liste"><a href="#">Fonctionnement du site</a></li>
+					<li class="footer--liste"><a href="#">Conditions générales de vente</a></li>
+					<li class="footer--liste"><a href="#">Données et confidentialité</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -295,8 +295,8 @@
 			<h3>Nos hébergements</h3>
 			<nav class="footer--nav">
 				<ul>
-					<li class="footer--liste">Charte qualité</li>
-					<li class="footer--liste">Soumettre votre hôtel</li>
+					<li class="footer--liste"><a href="#">Charte qualité</a></li>
+					<li class="footer--liste"><a href="#">Soumettre votre hôtel</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -304,11 +304,12 @@
 			<h3>Assistance</h3>
 			<nav class="footer--nav">
 				<ul>
-					<li class="footer--liste">Centre d'aide</li>
-					<li class="footer--liste">Nous contacter</li>
+					<li class="footer--liste"><a href="#">Centre d'aide</a></li>
+					<li class="footer--liste"><a href="#">Nous contacter</a></li>
 				</ul>
 			</nav>
 		</div>
 	</footer>
 </body>
+
 </html>
