--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 					<img src="./images/activites/3_medium/calanques.jpg"
 						srcset="./images/activites/3_medium/calanques.jpg 1200w, ./images/activites/4_small/calanques.jpg 600w"
 						sizes="(max-width: 768px) 600px, 1200px" alt="Les calanques" class="image--calanques">
-					<p>Par National des Calanques</p>
+					<p>Parc National des Calanques</p>
 				</div>
 				<div class="activite--ville--deux">
 					<div class="activite--notre--dame">
